Fix spacing issue with page navigation

--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -11,6 +11,10 @@
   padding: 1rem;
 }
 
+.nav-span {
+  font-size: .9rem;
+}
+
 .header-nav,
 .page-nav,
 .footer-links,
